# MarlinPandora

./: BuildSetup.cmake  CMakeLists.txt  ChangeLog.txt  Makefile  MarlinPandoraConfig.cmake  README.md
MarlinPandora/trunk/: BuildSetup.cmake  CMakeLists.txt  ChangeLog.txt  Makefile  MarlinPandoraConfig.cmake  MarlinPandoraConfig.cmake.in
MarlinPandora/trunk/include/: BFieldPlugin.h  CaloHitCreator.h  ExternalClusteringAlgorithm.h  GeometryCreator.h  MCParticleCreator.h  NonLinearityCorrection.h  PandoraPFANewProcessor.h  PfoCreator.h  SimpleBFieldCalculator.h  TrackCreator.h
MarlinPandora/trunk/scripts/: MarlinPandora.xml  MarlinPandoraCLIC.xml  MarlinPandoraFull.xml  MarlinPandoraFullCLIC.xml  PandoraLikelihoodData.xml  PandoraSettings.xml  PandoraSettingsBasic.xml  PandoraSettingsDefault.xml  PandoraSettingsMuon.xml  PandoraSettingsPerfectPFA.xml  PandoraSettingsPerfectPhoton.xml  PandoraSettingsPerfectPhotonNeutronK0L.xml  PandoraSettingsPhoton.xml  PandoraSettings_README.txt
MarlinPandora/trunk/src/: BFieldPlugin.cc  CaloHitCreator.cc  ExternalClusteringAlgorithm.cc  GeometryCreator.cc  InteractionLengthCalculator.cc  MCParticleCreator.cc  NonLinearityCorrection.cc  PandoraPFANewProcessor.cc  PathLengthCalculator.cc  PfoCreator.cc  SimpleBFieldCalculator.cc  TrackCreator.cc
doc/: Doxyfile
include/: CaloHitCreator.h  ExternalClusteringAlgorithm.h  GeometryCreator.h  InteractionLengthCalculator.h  MCParticleCreator.h  PandoraPFANewProcessor.h  PathLengthCalculator.h  PfoCreator.h  SimpleBFieldCalculator.h  TrackCreator.h
scripts/: ExampleSteering_CLIC_ILD.xml  MarlinPandora.xml  MarlinPandoraCLIC.xml  MarlinPandoraFull.xml  MarlinPandoraFullCLIC.xml  MarlinPandoraValidation.xml  MergePandoraLikelihoodData.py  PandoraLikelihoodData1EBin.xml  PandoraLikelihoodData9EBin.xml  PandoraLikelihoodData9EBin_CLIC_ILD.xml  PandoraSettings.xml  PandoraSettingsBasic.xml  PandoraSettingsDefault.xml  PandoraSettingsFast.xml  PandoraSettingsMuon.xml  PandoraSettingsPerfectPFA.xml  PandoraSettingsPerfectPhoton.xml  PandoraSettingsPerfectPhotonNeutronK0L.xml  PandoraSettingsPhoton.xml  PandoraSettingsSoftwareCompensationTraining.xml  PandoraSettings_README.txt
src/: BFieldPlugin.cc  CaloHitCreator.cc  ExternalClusteringAlgorithm.cc  GeometryCreator.cc  InteractionLengthCalculator.cc  MCParticleCreator.cc  PandoraPFANewProcessor.cc  PathLengthCalculator.cc  PfoCreator.cc  SimpleBFieldCalculator.cc  TrackCreator.cc
